Changed freelo job duration

--- a/cv_gsanchez_eng.tex
+++ b/cv_gsanchez_eng.tex
@@ -24,7 +24,7 @@
 \section{About me}
 \cvitem
     {}
-    {Computer Engineer. Enjoy team working for innovative software solutions and using new technologies.}{}
+    {Computer Engineer with customer-oriented point of view. Enjoy team working for innovative software solutions.}{}
     % \newline
 
 % --- Education
