--- a/input/experience.tex
+++ b/input/experience.tex
@@ -32,7 +32,7 @@
   \cventry
     {Dec. 2014 - Aug. 2015} % Date(s)
     {Unit Engineer} % Job title
-    {VENG S.A.} % Organization
+    {VENG S.A. for CONAE} % Organization
     {Cordoba, Argentina} % Location
     {}
     {
@@ -42,7 +42,7 @@
     }
 
   \cventry
-    {Sep. 2011 - Dec. 2014} % Date(s)
+    {Aug. 2014 - Dec. 2014} % Date(s)
     {Freelance Software Engineer} % Job title
     {SIANA Systems} % Organization
     {Remote (HQ San Diego, CA)} % Location
