min fixes and tweaks

--- a/cv_gsanchez_eng.tex
+++ b/cv_gsanchez_eng.tex
@@ -6,13 +6,11 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper,sans]{moderncv}   % opciones posibles incluyen tamaño de fuente ('10pt', '11pt' and '12pt'), tamaño de papel ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' y 'landscape') y familia de fuentes ('sans' y 'roman')
+\documentclass[11pt,a4paper,sans]{moderncv}
 
-% temas de moderncv
-\moderncvstyle{casual} % las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
-\moderncvcolor{green} % opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
+\moderncvstyle{casual} 
+\moderncvcolor{green} 
 
-% ajustes para los margenes de pagina
 \usepackage[scale=0.75]{geometry}
 
 \input{input/personal_data.tex}
@@ -24,7 +22,7 @@
 \section{About me}
 \cvitem
     {}
-    {Computer Engineer with customer-oriented point of view. Enjoy team working for innovative software solutions.}{}
+    {Computer Engineer. Software developer and data passionate with special care in end-user point of view.}{}
     % \newline
 
 % --- Education
