--- a/input/experience.tex
+++ b/input/experience.tex
@@ -3,7 +3,20 @@
 \section{Professional experience}
 
   \cventry
-    {Jul. 2016 - Present} % Date(s)
+    {Jan. 2019 - Present} % Date(s)
+    {Backend Developer} % Job title
+    {Mozio Group} % Organization
+    {Remote} % Location
+    {}
+    {
+      \begin{itemize} % Description(s) of tasks/responsibilities
+        \item {Providing backend solutions and bugfixing mainly with Python, Django and rest-framework over AWS infrastructure.}
+      \end{itemize}
+    }
+
+
+  \cventry
+    {Jul. 2016 - Jan. 2019} % Date(s)
     {Backend \& Machine Learning Developer} % Job title
     {Machinalis SRL} % Organization
     {Cordoba, Argentina} % Location
