--- a/input/personal_data.tex
+++ b/input/personal_data.tex
@@ -9,6 +9,7 @@
 % usage: \social[<optional type>][<optional url>]{<account name>}
 % where <optional type> should be either "linkedin", "xing", "twitter", "github", "gitlab" or "skype"
 \social[linkedin]{http://ar.linkedin.com/in/sanchezgonzalo/}
+\social[github]{https://github.com/sanchezg}
 
 % \photo[64pt][0.4pt]{IMG_2994.jpg}
 
