--- a/input/experience.tex
+++ b/input/experience.tex
@@ -38,7 +38,7 @@
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
         \item {Software developer for Windows kernel driver with security purposes (C\#, Intel Performance Monitoring Unit).}
-        \item {Member of a development team working on embedded software for an UAV (C/C++, BeagleBone Black, LPCExpresso, TI's TMS, MBED, RTEMS).}
+        \item {Embedded software development for an UAV project (C/C++, BeagleBone Black, LPCExpresso, TI's TMS, MBED, RTEMS).}
       \end{itemize}
     }
 
@@ -89,9 +89,8 @@
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
         \item {Implementation of a dedicated router for LAN/WAN access providing communication between all school building data network and to the University main network (Debian OS, IPTables, Firewalls, Linux Network).}
-        \item {Migration of main building data network to a VPN separated network. Providing privacy between different areas and physical and logical separations of the building (Debian OS, VPN)}.
-        \item {IT support at IMBIV (downtown building)}
-        \item {IT support of the school (at both downtown and main buildings)}
+        \item {Migration of main building data network to a VPN separated network. Providing privacy between different areas and physical and logical separations inside the building (Debian OS, VPN)}.
+        \item {IT support at both buildings of the University}
       \end{itemize}
     }
 
