update. Make descriptions even shorter

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -10,10 +10,10 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Providing backend solutions and bugfixing mainly with Python, Django and rest-framework over AWS infrastructure.}
+        \item {Integration with third-party providers API (Python, Django, rest-framework, Postgres, Redis, AWS).}
+        \item {Backend for car drivers app (Python, Django, rest-framework, AWS, MQTT, Redis).}
       \end{itemize}
     }
-
 
   \cventry
     {Jul. 2016 - Jan. 2019} % Date(s)
@@ -23,9 +23,9 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Implemented and deployed a microservice that uses machine learning and predicts payment status for the main ecommerce site in Latin America (Python, Flask, XGBoost, Scikit-Learn, Docker).}
-        \item {Implemented RESTful API backend for big data analysis system focusing on high-availability, fault tolerance, and auto-scaling (Python, Django, DRF, Postgres, Docker, Elasticsearch, Jenkins).}
-        \item {Implemented microservices that uses machine learning techniques for model sentiment analysis and topic detection for people and social networks analysis (NLP, Clustering, Python, Pandas, Scikit-Learn).}
+        \item {Microservice for payment status (approved, rejected) prediction for the main e-commerce site in LATAM (Python, Flask, XGBoost, Scikit-Learn, Docker).}
+        \item {Web app for big data analysis (Python, Django, DRF, Postgres, Docker, Elasticsearch, Jenkins).}
+        \item {Microservice for social network sentiment analysis and people topics detection (NLP, Clustering, Python, Pandas, Scikit-Learn).}
       \end{itemize}
     }
 
@@ -37,8 +37,8 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Software developer for Windows kernel driver with security purposes (C\#, Intel Performance Monitoring Unit).}
-        \item {Embedded software development for an UAV project (C/C++, BeagleBone Black, LPCExpresso, TI's TMS, MBED, RTEMS).}
+        \item {Windows kernel driver with security purposes (C\#, Intel Performance Monitoring Unit).}
+        \item {UAV control unit project (C/C++, BeagleBone Black, LPCExpresso, TI's TMS, MBED, RTEMS).}
       \end{itemize}
     }
 
@@ -74,9 +74,9 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Main software developer of an embedded board for the National Agency of Space Activity using NASA and ESA standards (C, 8051 Assembly).}
-        \item {Development of desktop applications for ground support equipment for an aerospace satellite (Python, C\#, Labview).}
-        \item {Firmware and test software design and development of a general purpose embedded systems development kit based on Freescale Kinetis K60 (C, Freescale Kinetis Assembly, Ethernet standard, I2C, SPI).}
+        \item {Embedded board for the National Agency of Space Activity using NASA and ESA standards (C, 8051 Assembly).}
+        \item {Desktop applications for ground support equipment for an aerospace satellite (Python, C\#, Labview).}
+        \item {General purpose embedded systems development kit (firmware and hardware design) based on Freescale Kinetis K60 (C, Freescale Kinetis Assembly, Ethernet standard, I2C, SPI).}
       \end{itemize}
     }
 
@@ -89,7 +89,7 @@
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
         \item {Implementation of a dedicated router for LAN/WAN access providing communication between all school building data network and to the University main network (Debian OS, IPTables, Firewalls, Linux Network).}
-        \item {Migration of main building data network to a VPN separated network. Providing privacy between different areas and physical and logical separations inside the building (Debian OS, VPN)}.
+        \item {Migration of main building data network to a VPN separated network. Providing privacy between different areas and physical and logical separations inside the building (Debian OS, VPN).}
         \item {IT support at both buildings of the University}
       \end{itemize}
     }
