--- a/input/personal_data.tex
+++ b/input/personal_data.tex
@@ -4,12 +4,14 @@
 % \address {367 Dr. Benito Soria st.}{Cordoba, Cordoba, X5004FOA Argentina}
 % \phone[mobile]{+54~(351)~155~143297}
 
+% \renewcommand{\sfdefault}{roman}
+
 \email{gonzalosanchezmarques@gmail.com}
 
 % usage: \social[<optional type>][<optional url>]{<account name>}
 % where <optional type> should be either "linkedin", "xing", "twitter", "github", "gitlab" or "skype"
-\social[linkedin]{http://ar.linkedin.com/in/sanchezgonzalo/}
-\social[github]{https://github.com/sanchezg}
+\social[linkedin]{sanchezgonzalo}
+\social[github]{sanchezg}
 
 % \photo[64pt][0.4pt]{IMG_2994.jpg}
 
