--- a/input/skills.tex
+++ b/input/skills.tex
@@ -1,14 +1,22 @@
 % ------------ Skills
 
 \section{Skills}
-  \cvitemwithcomment
-    {Programming} % Category
-    {Python, C/C++, Django, Flask, scikit-learn, pandas} % Skills
-    {Backend, Data Science \& Machine Learning}
+  % \cvitem
+  %   {General purpose, Backend \& Machine Learning}
+  %   {Python, C/C++, Django, Flask, scikit-learn, pandas, Postgres, DynamoDB, Redis, ElasticSearch, AWS, Docker} % Skills
 
-  \cvitemwithcomment
+  \cvitem
+    [.5em]
+    {Programming}
+    {Python, C/C++, Django, Flask, Rest-framework, Scikit-learn, Pandas}
+
+  \cvitem
+    [.5em]
+    {Others}
+    {Postgres, DynamoDB, Redis, ElasticSearch, AWS, Docker}
+
+  \cvitem
     {Languages} % Category
     {Spanish, English} % Skills
-    {}
 
 % ------- End of skills
