Updated 2020-04-14. output pdf

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -10,8 +10,8 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Integration with third-party providers API (Python, Django, rest-framework, Postgres, Redis, AWS).}
-        \item {Backend for car drivers app (Python, Django, rest-framework, AWS, MQTT, Redis).}
+        \item {Integration with third-party providers API (Django, DRF, Postgres, Redis, AWS).}
+        \item {Backend for car drivers app (Django, DRF, AWS, MQTT, Redis).}
       \end{itemize}
     }
 
@@ -23,9 +23,9 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Microservice for payment status (approved, rejected) prediction for the main e-commerce site in LATAM (Python, Flask, XGBoost, Scikit-Learn, Docker).}
-        \item {Web app for big data analysis (Python, Django, DRF, Postgres, Docker, Elasticsearch, Jenkins).}
-        \item {Microservice for social network sentiment analysis and people topics detection (NLP, Clustering, Python, Pandas, Scikit-Learn).}
+        \item {Microservice for payment status prediction (Flask, XGBoost, Scikit-Learn, Docker).}
+        \item {Web app for big data analysis (Django, DRF, Postgres, Docker, Elasticsearch, Jenkins).}
+        \item {Microservice for social networks sentiment analysis and people topics detection (NLP, Clustering, Python, Pandas, Scikit-Learn).}
       \end{itemize}
     }
 
@@ -50,7 +50,7 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Production and test responsible of aerospace equipment for the National Agency of Space Activity.}
+        \item {Production and test responsible of aerospace equipment for the Argentina's National Agency of Space Activity.}
       \end{itemize}
     }
 
@@ -74,9 +74,9 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Embedded board for the National Agency of Space Activity using NASA and ESA standards (C, 8051 Assembly).}
+        \item {Control unit for a satellite antenna according to NASA and ESA standards (C, 8051 Assembly).}
         \item {Desktop applications for ground support equipment for an aerospace satellite (Python, C\#, Labview).}
-        \item {General purpose embedded systems development kit (firmware and hardware design) based on Freescale Kinetis K60 (C, Freescale Kinetis Assembly, Ethernet standard, I2C, SPI).}
+        \item {General purpose embedded systems development kit (firmware and hardware design) (C, Freescale Kinetis Assembly, Ethernet standard, I2C, SPI).}
       \end{itemize}
     }
 
@@ -88,9 +88,8 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Implementation of a dedicated router for LAN/WAN access providing communication between all school building data network and to the University main network (Debian OS, IPTables, Firewalls, Linux Network).}
-        \item {Migration of main building data network to a VPN separated network. Providing privacy between different areas and physical and logical separations inside the building (Debian OS, VPN).}
-        \item {IT support at both buildings of the University}
+        \item {Implementation of a dedicated router for LAN/WAN (Debian OS, IPTables, Firewalls, Linux Network).}
+        \item {Migration of main building data network to a VPN separated network (Debian OS, VPN).}
       \end{itemize}
     }
 
