Latest experience updated

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -1,9 +1,21 @@
 % --- Professional experience
 
 \section{Professional experience}
-
   \cventry
-    {Jan. 2019 - Present} % Date(s)
+    {Dec. 2020 - Present} % Date(s)
+    {Backend Engineer} % Job title
+    {ShipHero} % Organization
+    {Remote} % Location
+    {}
+    {
+      \begin{itemize} % Description(s) of tasks/responsibilities
+        \item {Backend for shipping statistics (Flask, AWS)}
+        \item {Backend for warehouse workforce manager app (FastAPI, AWS, AsyncIO, SQLAlchemy).}
+        \item {Backend developments for the core business app (Flask, AWS, SQLAlchemy).}
+      \end{itemize}
+    }
+  \cventry
+    {Jan. 2019 - Nov. 2020} % Date(s)
     {Backend Developer} % Job title
     {Mozio Group} % Organization
     {Remote} % Location
