Finished Shiphero experience

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -2,16 +2,16 @@
 
 \section{Professional experience}
   \cventry
-    {Dec. 2020 - Present} % Date(s)
+    {Dec. 2020 - Jan. 2022} % Date(s)
     {Backend Engineer} % Job title
     {ShipHero} % Organization
     {Remote} % Location
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Backend for shipping statistics (Flask, AWS)}
-        \item {Backend for warehouse workforce manager app (FastAPI, AWS, AsyncIO, SQLAlchemy).}
-        \item {Backend developments for the core business app (Flask, AWS, SQLAlchemy).}
+        \item {API backend development and support for shipping and delivery statistics app (Python, Flask, MySQL over Aurora RDS).}
+        \item {API backend for warehouse workforce manager app (FastAPI, AWS, AsyncIO, SQLAlchemy).}
+        \item {Backend developments, bugfixes and improvements for the core business app (Flask, AWS, SQLAlchemy).}
       \end{itemize}
     }
   \cventry
