--- a/input/education.tex
+++ b/input/education.tex
@@ -4,7 +4,7 @@
 
 \cventry
     {2004 -- 2013}
-    {Computer Engineer}
+    {Bachelor of Computer Engineering}
     {Exacts, Physic and Natural Sciences School (National University of Cordoba)}
     {Cordoba, Argentina}
     {Final project: \emph{An embedded system (hardware \& software) for teach and multipurposes}}
