Make it fit in one page. Emphasize important skills and achievments

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -2,6 +2,7 @@
 
 \section{Professional experience}
   \cventry
+    [.5em]
     {Dec. 2020 - Jan. 2023} % Date(s)
     {Backend Engineer} % Job title
     {ShipHero} % Organization
@@ -9,12 +10,12 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {API backend development and support for shipping and delivery statistics app (Python, Flask, MySQL over Aurora RDS).}
-        \item {API backend for warehouse workforce manager app (FastAPI, AWS, AsyncIO, SQLAlchemy).}
-        \item {Backend developments, bugfixes and improvements for the core business app (Flask, AWS, SQLAlchemy).}
+        \item {Improved availability of analytics queries using Redshift, Flask, SQLAlchemy, AWS.}
+        \item {Developed a robust REST API for a workforce management app (FastAPI, AsyncIO).}
       \end{itemize}
     }
   \cventry
+    [.5em]
     {Jan. 2019 - Nov. 2020} % Date(s)
     {Backend Developer} % Job title
     {Mozio Group} % Organization
@@ -22,12 +23,13 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Integration with third-party providers API (Django, DRF, Postgres, Redis, AWS).}
-        \item {Backend for car drivers app (Django, DRF, AWS, MQTT, Redis).}
+        \item {Integrated core API with third-party providers (Django, DRF, Postgres, Redis, AWS).}
+        \item {Improved API response times by using Celery and Redis.}
+        \item {Developed a high performance REST API for a car drivers app (MQTT, Redis).}
       \end{itemize}
     }
-
   \cventry
+    [.5em]
     {Jul. 2016 - Jan. 2019} % Date(s)
     {Backend \& Machine Learning Developer} % Job title
     {Machinalis SRL} % Organization
@@ -35,74 +37,67 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Microservice for payment status prediction (Flask, XGBoost, Scikit-Learn, Docker).}
-        \item {Web app for big data analysis (Django, DRF, Postgres, Docker, Elasticsearch, Jenkins).}
-        \item {Microservice for social networks sentiment analysis and people topics detection (NLP, Clustering, Python, Pandas, Scikit-Learn).}
+        \item {Developed Microservices BE for payment status prediction (Flask, XGBoost, Scikit-Learn).}
+        \item {Developed a high availability REST API for big data analysis app (Django, Elasticsearch).}
+        \item {Analysed and trained models for social networks sentiment and people topics detection (Clustering, Pandas, Scikit-Learn).}
       \end{itemize}
     }
 
+\subsection{Other experiences}
   \cventry
-    {Sep. 2015 - Jul. 2016} % Date(s)
+    {2022 - 2023} % Date(s)
+    {Backend Engineer} % Job title
+    {AbstractAPI} % Organization
+    {Remote} % Location
+    {}
+    {}
+
+  \cventry
+    {2020} % Date(s)
+    {Backend Developer} % Job title
+    {BoostUp.ai} % Organization
+    {Remote} % Location
+    {}
+    {}
+
+  \cventry
+    {2015 - 2016} % Date(s)
     {Software Engineer} % Job title
     {Taller Technologies} % Organization
     {Cordoba, Argentina} % Location
     {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Windows kernel driver with security purposes (C\#, Intel Performance Monitoring Unit).}
-        \item {UAV control unit project (C/C++, BeagleBone Black, LPCExpresso, TI's TMS, MBED, RTEMS).}
-      \end{itemize}
-    }
+    {}
 
   \cventry
-    {Dec. 2014 - Aug. 2015} % Date(s)
+    {2014 - 2015} % Date(s)
     {Unit Engineer} % Job title
-    {VENG S.A. for CONAE} % Organization
+    {VENG S.A. (CONAE)} % Organization
     {Cordoba, Argentina} % Location
     {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Production and test responsible of aerospace equipment for the Argentina's National Agency of Space Activity.}
-      \end{itemize}
-    }
-
-  \cventry
-    {Aug. 2014 - Dec. 2014} % Date(s)
-    {Freelance Software Engineer} % Job title
-    {SIANA Systems} % Organization
-    {Remote (HQ San Diego, CA)} % Location
     {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Embedded software developer for home automation appliances (C, C++, Python).}
-      \end{itemize}
-    }
 
   \cventry
-    {Sep. 2011 - Sep. 2014} % Date(s)
+    {2014} % Date(s)
+    {Embedded Software Engineer} % Job title
+    {SIANA Systems} % Organization
+    {Remote} % Location
+    {}
+    {}
+
+  \cventry
+    {2011 - 2014} % Date(s)
     {Software Engineer} % Job title
     {DTA S.A.} % Organization
     {Cordoba, Argentina} % Location
     {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Control unit for a satellite antenna according to NASA and ESA standards (C, 8051 Assembly).}
-        \item {Desktop applications for ground support equipment for an aerospace satellite (Python, C\#, Labview).}
-        \item {General purpose embedded systems development kit (firmware and hardware design) (C, Freescale Kinetis Assembly, Ethernet standard, I2C, SPI).}
-      \end{itemize}
-    }
+    {}
 
   \cventry
-    {Sep. 2007 - Aug. 2011} % Date(s)
-    {IT Supporter and Data Networks technician} % Job title
+    {2007 - 2011} % Date(s)
+    {IT technician} % Job title
     {Compute Centre of the Exacts, Physic and Natural Sciences School} % Organization
     {Cordoba, Argentina} % Location
     {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Implementation of a dedicated router for LAN/WAN (Debian OS, IPTables, Firewalls, Linux Network).}
-        \item {Migration of main building data network to a VPN separated network (Debian OS, VPN).}
-      \end{itemize}
-    }
+    {}
 
 % --- End of professional experience
