--- a/input/personal_data.tex
+++ b/input/personal_data.tex
@@ -1,8 +1,9 @@
 % ---------- Personal data
 
 \name{Gonzalo}{Sanchez}
+% \quote{Software Engineer, self-starter data-driven with special care in end-user point of view.}
 % \address {367 Dr. Benito Soria st.}{Cordoba, Cordoba, X5004FOA Argentina}
-% \phone[mobile]{+54~(351)~155~143297}
+\phone[mobile]{+54~(351)~5143297}
 
 % \renewcommand{\sfdefault}{roman}
 
