--- a/input/skills.tex
+++ b/input/skills.tex
@@ -1,17 +1,12 @@
 % ------------ Skills
 
 \section{Skills}
-  % \cvitem
-  %   {General purpose, Backend \& Machine Learning}
-  %   {Python, C/C++, Django, Flask, scikit-learn, pandas, Postgres, DynamoDB, Redis, ElasticSearch, AWS, Docker} % Skills
 
   \cvitem
-    [.5em]
     {Programming}
-    {Python, C/C++, Django, Flask, Rest-framework, Scikit-learn, Pandas}
+    {Python, C/C++, Django, Flask, Rest-framework}
 
   \cvitem
-    [.5em]
     {Others}
     {Postgres, DynamoDB, Redis, ElasticSearch, AWS, Docker}
 
