--- a/cv_gsanchez_eng.tex
+++ b/cv_gsanchez_eng.tex
@@ -1,17 +1,15 @@
-%% Inicio del archivo `template-es.tex'.
 %% Copyright 2006-2013 Xavier Danaux (xdanaux@gmail.com).
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License version 1.3c,
 % available at http://www.latex-project.org/lppl/.
 
-
 \documentclass[11pt,a4paper,sans]{moderncv}
 
 \moderncvstyle{casual} 
 \moderncvcolor{green} 
 
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.8]{geometry}
 
 \input{input/personal_data.tex}
 
@@ -20,10 +18,9 @@
 \maketitle
 
 \section{About me}
-\cvitem
+  \cvitem
     {}
-    {Computer Engineer. Software developer and data passionate with special care in end-user point of view.}{}
-    % \newline
+    {Software Engineer, self-starter data-driven with special care in end-user point of view.}{}
 
 % --- Education
 % makes a typical resume job / education entry
@@ -37,6 +34,3 @@
 %\bibliography{publications}                   % 'publications' es el nombre del archivo BibTeX
 
 \end{document}
-
-
-%% fin del archivo `template-es.tex'.
