--- a/input/education.tex
+++ b/input/education.tex
@@ -2,30 +2,22 @@
 
 \section{Education}
 
-\cventry
-    {2004 -- 2013}
+  \cventry
+    {2004 - 2013}
     {Bachelor of Computer Engineering}
-    {Exacts, Physic and Natural Sciences School (National University of Cordoba)}
+    {Cordoba National University}
     {Cordoba, Argentina}
-    {Final project: \emph{An embedded system (hardware \& software) for teach and multipurposes}}
-    {Advisors: \emph{Eng. Gustavo Parlanti and Eng. Orlando Micolini}}
+    {}
+    {}
 
 \subsection{Teaching}
 
-\cventry
+  \cvitem
     {2014} % Date(s)
-    {Teacher of Kinetis K60 architecture and MQX(r) RTOS programming Workshop.}
-    {Exacts, Physic and Natural Sciences School (National University of Cordoba)} % Institution
-    {Cordoba, Argentina} % Location
-    {}
-    {Computational Systems Course.}
+    {Kinetis K60 architecture and MQX(r) RTOS programming Workshop at Cordoba National University}
 
-  \cventry
-    {2010--2013}
-    {Student Assistant at Data Communications Course}
-    {Exacts, Physic and Natural Sciences School (National University of Cordoba)} % Institution
-    {Cordoba, Argentina}
-    {}
-    {Supervised Professional Practice: \emph{Asterisk Server Implementation and Two Networks Interconnection Through IAX2}}
+  \cvitem
+    {2010 - 2013}
+    {Student Assistant at Data Communications Course, Cordoba National University}
 
 % ---------- End of education
