--- a/input/skills.tex
+++ b/input/skills.tex
@@ -4,11 +4,11 @@
 
   \cvitem
     {Programming}
-    {Python, C/C++, Django, Flask, Rest-framework}
+    {Python, C/C++, Django, Flask, rest-framework}
 
   \cvitem
     {Others}
-    {Postgres, DynamoDB, Redis, ElasticSearch, AWS, Docker}
+    {Postgres, MySQL, DynamoDB, Redis, ElasticSearch, AWS, Docker}
 
   \cvitem
     {Languages} % Category
