--- a/cv_gsanchez_eng.tex
+++ b/cv_gsanchez_eng.tex
@@ -4,10 +4,10 @@
 % conditions of the LaTeX Project Public License version 1.3c,
 % available at http://www.latex-project.org/lppl/.
 
-\documentclass[11pt,a4paper,sans]{moderncv}
+\documentclass[10pt,a4paper,sans]{moderncv}
 
-\moderncvstyle{casual} 
-\moderncvcolor{green} 
+\moderncvstyle{casual}
+\moderncvcolor{green}
 
 \usepackage[scale=0.8]{geometry}
 
@@ -17,20 +17,17 @@
 \begin{document}
 \maketitle
 
-\section{About me}
+\section{Personal Summary}
   \cvitem
     {}
-    {Software Engineer, self-starter data-driven with special care in end-user point of view.}{}
+    {As a software engineer, I am a self-starter with a strong commitment to delivering data-driven, user-friendly solutions. I believe in keeping things simple, and I am always seeking new ways to improve the user experience. My goal is to develop efficient and effective software that meets the needs of both the end-user and the business.}{}
 
-% --- Education
-% makes a typical resume job / education entry
-% usage: \cventry[spacing]{years}{degree/job title}{institution/employer}{localization}{optionnal: grade/...}{optional: comment/job description}
 \input{input/skills.tex}
 \input{input/experience.tex}
 \input{input/education.tex}
 
 \nocite{*}
 %\bibliographystyle{plain}
-%\bibliography{publications}                   % 'publications' es el nombre del archivo BibTeX
+%\bibliography{publications}
 
 \end{document}
