--- a/input/experience.tex
+++ b/input/experience.tex
@@ -2,7 +2,7 @@
 
 \section{Professional experience}
   \cventry
-    [.5em]
+    [.25em]
     {Dec. 2020 - Jan. 2023} % Date(s)
     {Backend Engineer} % Job title
     {ShipHero} % Organization
@@ -10,12 +10,12 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Improved availability of analytics queries using Redshift, Flask, SQLAlchemy, AWS.}
-        \item {Developed a robust REST API for a workforce management app (FastAPI, AsyncIO).}
+        \item {Improved analytics query response times by 90\% through utilization of Redshift.}
+        \item {Designed and developed a robust REST API for a workforce management app using FastAPI and AsyncIO.}
       \end{itemize}
     }
   \cventry
-    [.5em]
+    [.25em]
     {Jan. 2019 - Nov. 2020} % Date(s)
     {Backend Developer} % Job title
     {Mozio Group} % Organization
@@ -23,13 +23,13 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Integrated core API with third-party providers (Django, DRF, Postgres, Redis, AWS).}
-        \item {Improved API response times by using Celery and Redis.}
-        \item {Developed a high performance REST API for a car drivers app (MQTT, Redis).}
+        \item {Successfully integrated the core API with multiple third-party providers utilizing Django, DRF, Postgres, Redis, and AWS.}
+        \item {Optimized API response times through implementation of Celery and Redis.}
+        \item {Designed and implemented a high-performance REST API for a car drivers app using MQTT and Redis.}
       \end{itemize}
     }
   \cventry
-    [.5em]
+    [.25em]
     {Jul. 2016 - Jan. 2019} % Date(s)
     {Backend \& Machine Learning Developer} % Job title
     {Machinalis SRL} % Organization
@@ -37,30 +37,33 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Developed Microservices BE for payment status prediction (Flask, XGBoost, Scikit-Learn).}
-        \item {Developed a high availability REST API for big data analysis app (Django, Elasticsearch).}
-        \item {Analysed and trained models for social networks sentiment and people topics detection (Clustering, Pandas, Scikit-Learn).}
+        \item {Created Microservices for payment status prediction utilizing Flask, XGBoost, and Scikit-Learn.}
+        \item {Developed a high-availability REST API for a big data analysis app using Django and Elasticsearch.}
+        \item {Analyzed and trained models for sentiment analysis and people topic detection using Clustering, Pandas, and Scikit-Learn.}
       \end{itemize}
     }
 
-\subsection{Other experiences}
+\subsection{Other relevant experience}
   \cventry
+    [.25em]
     {2022 - 2023} % Date(s)
     {Backend Engineer} % Job title
     {AbstractAPI} % Organization
     {Remote} % Location
     {}
-    {}
+    {Docker, Python, Django, AWS}
 
   \cventry
+    [.25em]
     {2020} % Date(s)
     {Backend Developer} % Job title
     {BoostUp.ai} % Organization
     {Remote} % Location
     {}
-    {}
+    {Python, Flask, MongoDB}
 
   \cventry
+    [.25em]
     {2015 - 2016} % Date(s)
     {Software Engineer} % Job title
     {Taller Technologies} % Organization
@@ -69,6 +72,7 @@
     {}
 
   \cventry
+    [.25em]
     {2014 - 2015} % Date(s)
     {Unit Engineer} % Job title
     {VENG S.A. (CONAE)} % Organization
@@ -77,6 +81,7 @@
     {}
 
   \cventry
+    [.25em]
     {2014} % Date(s)
     {Embedded Software Engineer} % Job title
     {SIANA Systems} % Organization
@@ -85,6 +90,7 @@
     {}
 
   \cventry
+    [.25em]
     {2011 - 2014} % Date(s)
     {Software Engineer} % Job title
     {DTA S.A.} % Organization
@@ -93,6 +99,7 @@
     {}
 
   \cventry
+    [.25em]
     {2007 - 2011} % Date(s)
     {IT technician} % Job title
     {Compute Centre of the Exacts, Physic and Natural Sciences School} % Organization
