--- a/cv_gsanchez_eng.tex
+++ b/cv_gsanchez_eng.tex
@@ -9,12 +9,16 @@
 \moderncvstyle{casual}
 \moderncvcolor{green}
 
-\usepackage[scale=0.8]{geometry}
+\usepackage[scale=0.85]{geometry}
 
 \input{input/personal_data.tex}
 
 %----------------------------------------------------------------------------------
 \begin{document}
+
+\setlength{\hintscolumnwidth}{0.175\textwidth}  % Default value 0.175
+\renewcommand*{\hintfont}{\normalsize\mdseries\upshape}
+
 \maketitle
 
 \section{Personal Summary}
