--- a/input/experience.tex
+++ b/input/experience.tex
@@ -2,35 +2,48 @@
 
 \section{Professional experience}
   \cventry
-    [.25em]
-    {Dec. 2020 - Jan. 2023} % Date(s)
-    {Backend Engineer} % Job title
+    [.125em]
+    {Dec 2020 - Jan 2023} % Date(s)
+    {Senior Backend Engineer} % Job title
     {ShipHero} % Organization
     {Remote} % Location
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Improved analytics query response times by 90\% through utilization of Redshift.}
-        \item {Designed and developed a robust REST API for a workforce management app using FastAPI and AsyncIO.}
+        \item {Improved shipping stats app analytics query response times by 90\% through utilization of Redshift.}
+        \item {Developed a robust REST API for a workforce management app making managers save 50\% time in leading people tasks (FastAPI, AsyncIO).}
       \end{itemize}
     }
   \cventry
-    [.25em]
-    {Jan. 2019 - Nov. 2020} % Date(s)
-    {Backend Developer} % Job title
+    [.125em]
+    {Nov 2022 - Feb 2023} % Date(s)
+    {Senior Backend Engineer} % Job title
+    {AbstractAPI} % Organization
+    {Remote} % Location
+    {}
+    {
+      \begin{itemize}
+        \item {Enhanced development times set-up and experience by applying Docker.}
+        \item {Boosted missing API data from 85 to 98\% by integrating a third-party provider (Python, Django).}
+      \end{itemize}
+    }
+  \cventry
+    [.125em]
+    {Jan 2019 - Nov 2020} % Date(s)
+    {Backend Engineer} % Job title
     {Mozio Group} % Organization
     {Remote} % Location
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Successfully integrated the core API with multiple third-party providers utilizing Django, DRF, Postgres, Redis, and AWS.}
+        \item {Integrated the core API with third-party providers (Django, rest-framework, Postgres, Redis, and AWS).}
         \item {Optimized API response times through implementation of Celery and Redis.}
         \item {Designed and implemented a high-performance REST API for a car drivers app using MQTT and Redis.}
       \end{itemize}
     }
   \cventry
-    [.25em]
-    {Jul. 2016 - Jan. 2019} % Date(s)
+    [.125em]
+    {Jul 2016 - Jan 2019} % Date(s)
     {Backend \& Machine Learning Developer} % Job title
     {Machinalis SRL} % Organization
     {Cordoba, Argentina} % Location
@@ -44,27 +57,19 @@
     }
 
 \subsection{Other relevant experience}
-  \cventry
-    [.25em]
-    {2022 - 2023} % Date(s)
-    {Backend Engineer} % Job title
-    {AbstractAPI} % Organization
-    {Remote} % Location
-    {}
-    {Docker, Python, Django, AWS}
 
   \cventry
-    [.25em]
-    {2020} % Date(s)
+    [.125em]
+    {Jun 2020 - Sep 2020} % Date(s)
     {Backend Developer} % Job title
     {BoostUp.ai} % Organization
     {Remote} % Location
     {}
-    {Python, Flask, MongoDB}
+    {}
 
   \cventry
-    [.25em]
-    {2015 - 2016} % Date(s)
+    [.125em]
+    {Sep 2015 - Jul 2016} % Date(s)
     {Software Engineer} % Job title
     {Taller Technologies} % Organization
     {Cordoba, Argentina} % Location
@@ -72,8 +77,8 @@
     {}
 
   \cventry
-    [.25em]
-    {2014 - 2015} % Date(s)
+    [.125em]
+    {Dec 2014 - Aug 2015} % Date(s)
     {Unit Engineer} % Job title
     {VENG S.A. (CONAE)} % Organization
     {Cordoba, Argentina} % Location
@@ -81,8 +86,8 @@
     {}
 
   \cventry
-    [.25em]
-    {2014} % Date(s)
+    [.125em]
+    {Aug - Dec 2014} % Date(s)
     {Embedded Software Engineer} % Job title
     {SIANA Systems} % Organization
     {Remote} % Location
@@ -90,8 +95,8 @@
     {}
 
   \cventry
-    [.25em]
-    {2011 - 2014} % Date(s)
+    [.125em]
+    {Sep 2011 - Sep 2014} % Date(s)
     {Software Engineer} % Job title
     {DTA S.A.} % Organization
     {Cordoba, Argentina} % Location
@@ -99,9 +104,9 @@
     {}
 
   \cventry
-    [.25em]
-    {2007 - 2011} % Date(s)
-    {IT technician} % Job title
+    [.125em]
+    {Sep 2007 - Aug 2011} % Date(s)
+    {IT support \& Sysadmin} % Job title
     {Compute Centre of the Exacts, Physic and Natural Sciences School} % Organization
     {Cordoba, Argentina} % Location
     {}
