Moved Abstract as freelance

--- a/input/experience.tex
+++ b/input/experience.tex
@@ -16,19 +16,6 @@
     }
   \cventry
     [.125em]
-    {Nov 2022 - Feb 2023} % Date(s)
-    {Senior Backend Engineer} % Job title
-    {AbstractAPI} % Organization
-    {Remote} % Location
-    {}
-    {
-      \begin{itemize}
-        \item {Enhanced development times set-up and experience by applying Docker.}
-        \item {Boosted missing API data from 85 to 98\% by integrating a third-party provider (Python, Django).}
-      \end{itemize}
-    }
-  \cventry
-    [.125em]
     {Jan 2019 - Nov 2020} % Date(s)
     {Backend Engineer} % Job title
     {Mozio Group} % Organization
@@ -57,7 +44,19 @@
     }
 
 \subsection{Other relevant experience}
-
+  \cventry
+    [.125em]
+    {Nov 2022 - Feb 2023} % Date(s)
+    {Senior Backend Engineer (Freelance)} % Job title
+    {AbstractAPI} % Organization
+    {Remote} % Location
+    {}
+    {
+      \begin{itemize}
+        \item {Enhanced development times set-up and experience by applying Docker.}
+        \item {Boosted missing API data from 85 to 98\% by integrating a third-party provider (Python, Django).}
+      \end{itemize}
+    }
   \cventry
     [.125em]
     {Jun 2020 - Sep 2020} % Date(s)
@@ -65,7 +64,7 @@
     {BoostUp.ai} % Organization
     {Remote} % Location
     {}
-    {}
+    {Developed analytics queries for their main pipelines in MongoDB. Technologies: Python, Flask.}
 
   \cventry
     [.125em]
@@ -88,7 +87,7 @@
   \cventry
     [.125em]
     {Aug - Dec 2014} % Date(s)
-    {Embedded Software Engineer} % Job title
+    {Embedded Software Engineer (Freelance)} % Job title
     {SIANA Systems} % Organization
     {Remote} % Location
     {}
@@ -101,8 +100,7 @@
     {DTA S.A.} % Organization
     {Cordoba, Argentina} % Location
     {}
-    {}
-
+    {Main developer of the Control Unit Software for the SAOCOM satellite (CONAE).}
   \cventry
     [.125em]
     {Sep 2007 - Aug 2011} % Date(s)
