--- a/input/skills.tex
+++ b/input/skills.tex
@@ -4,14 +4,14 @@
 
   \cvitem
     {Programming}
-    {Python, C/C++, Django, Flask, rest-framework}
+    {Python, Django, Flask, rest-framework. C, FastAPI.}
 
   \cvitem
     {Others}
     {Postgres, MySQL, DynamoDB, Redis, ElasticSearch, AWS, Docker}
 
   \cvitem
-    {Languages} % Category
-    {Spanish, English} % Skills
+    {Languages}
+    {Spanish, English}
 
 % ------- End of skills
