--- a/input/skills.tex
+++ b/input/skills.tex
@@ -4,11 +4,11 @@
 
   \cvitem
     {Programming}
-    {Python, Django, Flask, rest-framework. C, FastAPI.}
+    {Python, C, Django, Flask, rest-framework, FastAPI.}
 
   \cvitem
     {Others}
-    {Postgres, MySQL, DynamoDB, Redis, ElasticSearch, AWS, Docker}
+    {Postgres, MySQL, Redis, ElasticSearch, AWS, Docker.}
 
   \cvitem
     {Languages}
