--- a/input/experience.tex
+++ b/input/experience.tex
@@ -3,6 +3,20 @@
 \section{Professional experience}
   \cventry
     [.125em]
+    {Jun 2023 - Present} % Date(s)
+    {Senior Backend Engineer} % Job title
+    {Select Star} % Organization
+    {Remote} % Location
+    {}
+    {
+      \begin{itemize} % Description(s) of tasks/responsibilities
+        \item {SCIM compliant Users API to offer integration with third party User Management and Auth tools.}
+        \item {End user features by implementing Backend with Python, Django and rest-framework.}
+        \item {Development process improvement by adding development tools (isort, Docker, pre-commit).}
+      \end{itemize}
+    }
+  \cventry
+    [.125em]
     {Dec 2020 - Jan 2023} % Date(s)
     {Senior Backend Engineer} % Job title
     {ShipHero} % Organization
@@ -37,7 +51,7 @@
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Created Microservices for payment status prediction utilizing Flask, XGBoost, and Scikit-Learn.}
+        \item {Microservice for payment status prediction (Flask, XGBoost, Scikit-Learn).}
         \item {Developed a high-availability REST API for a big data analysis app using Django and Elasticsearch.}
         \item {Analyzed and trained models for sentiment analysis and people topic detection using Clustering, Pandas, and Scikit-Learn.}
       \end{itemize}
