--- a/input/experience.tex
+++ b/input/experience.tex
@@ -3,16 +3,15 @@
 \section{Professional experience}
   \cventry
     [.125em]
-    {Jun 2023 - Present} % Date(s)
-    {Senior Backend Engineer} % Job title
+    {Jun 2023 - Dec 2023} % Date(s)
+    {Backend Engineer} % Job title
     {Select Star} % Organization
     {Remote} % Location
     {}
     {
       \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {SCIM compliant Users API to offer integration with third party User Management and Auth tools.}
-        \item {End user features by implementing Backend with Python, Django and rest-framework.}
-        \item {Development process improvement by adding development tools (isort, Docker, pre-commit).}
+        \item {SCIM compliant User\'s API implementation}
+        \item {N+1 queries optimization reducing API response times}
       \end{itemize}
     }
   \cventry
@@ -100,7 +99,7 @@
 
   \cventry
     [.125em]
-    {Aug - Dec 2014} % Date(s)
+    {Aug 2014 - Dec 2014} % Date(s)
     {Embedded Software Engineer (Freelance)} % Job title
     {SIANA Systems} % Organization
     {Remote} % Location
